--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemailer": "^6.9.5",
     "path": "^0.12.7",
     "socket.io": "^4.7.2",
